FEATURE : add all side of dice in CSS

--- a/index.html
+++ b/index.html
@@ -9,10 +9,87 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <ion-app>
+        <ion-content>
+            <ion-grid>
+                <ion-row>
+                    <ion-col>
+                        <h1 class="ion-text-center">NEW GAME</h1>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col size="4">
+                        <h1 class="ion-text-center">PLAYER ONE</h1>
+                    </ion-col>
+                    <ion-col>
+                        <h1 class="ion-text-center"></h1>
+                    </ion-col>
+                    <ion-col size="4">
+                        <h1 class="ion-text-center">PLAYER TWO</h1>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col size="4">
+                        <h1 class="ion-text-center">43</h1>
+                    </ion-col>
+                    <ion-col size='4'>
 
+                        <div class="dice ion-text-center">
+                            <!-- <div class="side one">
+                              <div class="dot one"></div>
+                            </div>-->
+
+                            <!--
+                            <div class="side two">
+                                <div class="dot t-one"></div>
+                                <div class="dot b-one"></div>
+                            </div>
+                            <div class="side three">
+                                <div class="dot one"></div>
+                                <div class="dot tr-one"></div>
+                                <div class="dot bl-one"></div>
+                            </div>
+                            <div id="side4">
+                                <div class="dot tl-one"></div>
+                                <div class="dot tr-one"></div>
+                                <div class="dot br-one"></div>
+                                <div class="dot bl-one"></div>
+                            </div>                        
+                            <div id="side5">
+                                <div class="dot one"></div>
+                                <div class="dot tl-one"></div>
+                                <div class="dot tr-one"></div>
+                                <div class="dot br-one"></div>
+                                <div class="dot bl-one"></div>
+                            </div>
+                        -->
+                            <div id="side6">
+                                <div class="dot ml-one"></div>
+                                <div class="dot mr-one"></div>
+                                <div class="dot tl-one"></div>
+                                <div class="dot tr-one"></div>
+                                <div class="dot br-one"></div>
+                                <div class="dot bl-one"></div>
+                            </div>
+
+
+
+                        </div>
+                    </ion-col>
+                    <ion-col size="4">
+                        <h1 class="ion-text-center">72</h1>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-content>
+
+    </ion-app>
 </body>
 
 </html>
