--- a/sauve.html
+++ b/sauve.html
@@ -17,58 +17,75 @@
 <body>
     <ion-app>
         <ion-content>
-            <ion-grid>
+            <ion-grid class="ion-justify-content-between">
 
-                <ion-row class="ion-hide-lg-down ion-align-items-center ">
+                <ion-row class="ion-hide-lg-down ion-align-items-center">
                     <ion-col size="12" class="ion-hide-lg-down btn">
                         <ion-icon name="add-circle-outline"></ion-icon>
                         <ion-label>NEW GAME</ion-label>
                     </ion-col>
                 </ion-row>
 
-                <ion-row class="playerone ion-align-items-center ">
+                <ion-row class="row_score ion-align-items-center ion-justify-content-center">
 
-                    <ion-col size="12" size-lg="6" class="playerone ion-text-center ">
-                        <h1>PLAYER 1 </h1>
-                        <div class="ion-text-center score">72</div>
-                        <div class="score-wrapper">
+                    <icon-col size-lg="5">
+                        <ion-row>
+
+                            <ion-col size="12" size-lg="12">
+                                <h1 class="ion-text-center player">PLAYER 1</h1>
+                            </ion-col>
+                            <ion-col size="6" size-lg="5">
+                                <p class="ion-text-center score">72</p>
+                            </ion-col>
+                    </icon-col>
+
+                    <ion-col size-lg="2">
+                    </ion-col>
+
+                    <icon-col size-lg="5">
+                        <ion-col size="12" size-lg="12">
+                            <h1 class="ion-text-center player">PLAYER 2</h1>
+                        </ion-col>
+                        <ion-col size="6" size-lg="5">
+                            <p class="ion-text-center score">50</p>
+                        </ion-col>
+                </ion-row>
+                </icon-col>
+
+                </ion-row>
+
+
+
+                <ion-row class="row_score ion-align-items-center ion-justify-content-center">
+                    <ion-col size="6" size-lg="5">
+                        <div class="score-wrapper ion-text-center">
                             <h1 class="title-current">CURRENT</h1>
                             <p class="score-current">11</p>
                         </div>
                     </ion-col>
 
-                    <ion-col size="12" size-lg="6" class="playertwo ion-text-center ion-hide-lg-down">
-                        <h1>PLAYER 2 </h1>
-                        <div class="ion-text-center score">72</div>
-                        <div class="score-wrapper">
+                    <ion-col size-lg="2" class="ion-hide-lg-down">
+                        <ion-row class="row_score ion-align-items-center">
+                            <ion-col size="12" class="btn">
+                                <ion-icon name="sync-outline"></ion-icon>
+                                <ion-label>ROLL DICE</ion-label>
+                            </ion-col>
+                            <ion-col size="12" class="btn">
+                                <ion-icon name="download-outline"></ion-icon>
+                                <ion-label>HOLD</ion-label>
+                            </ion-col>
+                        </ion-row>
+                    </ion-col>
+
+                    <ion-col size="6" size-lg="5">
+                        <div class="score-wrapper ion-text-center">
                             <h1 class="title-current">CURRENT</h1>
                             <p class="score-current">11</p>
                         </div>
                     </ion-col>
-
                 </ion-row>
 
-                <ion-row class="playertwo ion-align-items-center ion-hide-lg-up">
-                    <ion-col size="12" class="ion-text-center">
-                        <h1>PLAYER 1 </h1>
-                        <div class="ion-text-center score">72</div>
-                        <div class="score-wrapper">
-                            <h1 class="title-current">CURRENT</h1>
-                            <p class="score-current">11</p>
-                        </div>
-                    </ion-col>
-                </ion-row>
 
-                <ion-row class="ion-hide-lg-down btn-bottom">
-                    <ion-col size="12" class="ion-hide-lg-down btn">
-                        <ion-icon name="sync-outline"></ion-icon>
-                        <ion-label>ROLL DICE</ion-label>
-                    </ion-col>
-                    <ion-col size="12" class="ion-hide-lg-down btn">
-                        <ion-icon name="download-outline"></ion-icon>
-                        <ion-label>HOLD</ion-label>
-                    </ion-col>
-                </ion-row>
                 <!-- ROW 1 NEW GAME-->
 
                 <div class="dice-roll">
