FEATURE : ADD EVENT CLICK ON BOTTOM BAR MENU

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
     <title>Document</title>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
@@ -46,7 +47,7 @@
                         </ion-row>
                     </ion-col>
 
-                    <ion-col size="12" size-lg="6" class="playertwo ion-text-center ion-hide-lg-down">
+                    <ion-col size="12" size-lg="6" class="playertwo ion-text-center">
                         <ion-row class="ion-align-items-center">
                             <ion-col size='12'>
                                 <h1>PLAYER 2 <span class="dot dot-player"></span>
@@ -65,33 +66,6 @@
                             </ion-col>
                         </ion-row>
                     </ion-col>
-
-
-                </ion-row>
-
-
-
-
-
-
-
-                <ion-row class="playertwo ion-align-items-center ion-hide-lg-up">
-                    <ion-col size="12" class="ion-text-center">
-                        <ion-row class="ion-align-items-center">
-                            <ion-col size='12'>
-                                <h1>PLAYER 2 </h1>
-                            </ion-col>
-                            <ion-col size='6'>
-                                <div class="ion-text-center score score-p2">72</div>
-                            </ion-col>
-                            <ion-col size="6">
-                                <div class="score-wrapper">
-                                    <h1 class="title-current">CURRENT</h1>
-                                    <p class="score-current">11</p>
-                                </div>
-                            </ion-col>
-                        </ion-row>
-                    </ion-col>
                 </ion-row>
 
                 <ion-row class="ion-hide-lg-down btn-bottom">
@@ -106,11 +80,37 @@
                         </button>
                     </ion-col>
                 </ion-row>
+
                 <!-- ROW 1 NEW GAME-->
 
                 <div class="dice-roll">
-                    <div class="dice ion-text-center">
-                        <div id="side6">
+                    <div class="dice ion-text-center ">
+                        <div class="side side1">
+                            <div class="dot one"></div>
+                        </div>
+                        <div class="side side2 ion-hide">
+                            <div class="dot tr-one"></div>
+                            <div class="dot bl-one"></div>
+                        </div>
+                        <div class="side side3 ion-hide">
+                            <div class="dot one"></div>
+                            <div class="dot tr-one"></div>
+                            <div class="dot bl-one"></div>
+                        </div>
+                        <div class="side side4 ion-hide">
+                            <div class="dot tl-one"></div>
+                            <div class="dot tr-one"></div>
+                            <div class="dot br-one"></div>
+                            <div class="dot bl-one"></div>
+                        </div>
+                        <div class="side side5 ion-hide">
+                            <div class="dot one"></div>
+                            <div class="dot tl-one"></div>
+                            <div class="dot tr-one"></div>
+                            <div class="dot br-one"></div>
+                            <div class="dot bl-one"></div>
+                        </div>
+                        <div class="side side6 ion-hide">
                             <div class="dot ml-one"></div>
                             <div class="dot mr-one"></div>
                             <div class="dot tl-one"></div>
@@ -120,81 +120,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-                <!--
-                    <ion-col size='4'>
-                    
-                        <div class="dice ion-text-center">
-
-                            <div class="side1">
-                                <div class="dot one"></div>
-                            </div>
-                            <div class="side2">
-                                <div class="dot t-one"></div>
-                                <div class="dot b-one"></div>
-                            </div>
-                            <div class="side3">
-                                <div class="dot one"></div>
-                                <div class="dot tr-one"></div>
-                                <div class="dot bl-one"></div>
-                            </div>
-                            <div id="side4">
-                                <div class="dot tl-one"></div>
-                                <div class="dot tr-one"></div>
-                                <div class="dot br-one"></div>
-                                <div class="dot bl-one"></div>
-                            </div>
-                            <div id="side5">
-                                <div class="dot one"></div>
-                                <div class="dot tl-one"></div>
-                                <div class="dot tr-one"></div>
-                                <div class="dot br-one"></div>
-                                <div class="dot bl-one"></div>
-                            </div>
-
-
-
-
-
-                        </div>
-                    </ion-col>
-                    -->
-
-
-
-                <!-- ROW 3  CURRENT SCORE
-                <ion-row class="ion-align-items-center row_current">
-                    <ion-col size="12" size-xl="4">
-                        <div class="score-wrapper ion-text-center">
-                            <h1 class="title-current">CURRENT</h1>
-                            <p class="score-current">11</p>
-                        </div>
-
-                    </ion-col>
-                    <ion-col size='4'>
-                        <div class="ion-text-center btn">
-                            <ion-icon name="sync-outline"></ion-icon>
-                            <p>ROLL DICE</p>
-                        </div>
-                        <div class="ion-text-center btn">
-                            <ion-icon name="download-outline"></ion-icon>
-                            <p>HOLD</p>
-                        </div>
-
-                    </ion-col>
-                    <ion-col size="12" size-xl="4">
-                        <div class="score-wrapper ion-text-center">
-                            <h1 class="title-current">CURRENT</h1>
-                            <p class="score-current">11</p>
-                        </div>
-                    </ion-col>
-                </ion-row>
--->
-
             </ion-grid>
 
         </ion-content>
@@ -202,17 +127,17 @@
         <ion-tabs class="ion-hide-lg-up">
 
             <ion-tab-bar slot="bottom">
-                <ion-tab-button tab="tab-schedule">
+                <ion-tab-button onclick="reinitGame()">
                     <ion-icon name="add-circle-outline"></ion-icon>
                     <ion-label>NEW GAME</ion-label>
                 </ion-tab-button>
 
-                <ion-tab-button tab="tab-speaker">
+                <ion-tab-button onclick="gameStart()">
                     <ion-icon name="sync-outline"></ion-icon>
                     <ion-label>ROLL DICE</ion-label>
                 </ion-tab-button>
 
-                <ion-tab-button tab="tab-map">
+                <ion-tab-button onclick="holdScore();changeCurrentPlayer()">
                     <ion-icon name="download-outline"></ion-icon>
                     <ion-label>HOLD</ion-label>
                 </ion-tab-button>
